Changes for next release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Added missing prereqs on MooseX::Types and MooseX::Types::Path::Class.
+
+
 0.02     2012-04-14
 
 - Remove autodie from prereqs since there's nothing in the code that needs it
