Changes for next release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- The logger attribute was not lazy, so it could be built before the quiet
+  option was processed. This effectively meant that the quiet option was
+  ignored.
+
+
 0.03     2012-04-14
 
 - Added missing prereqs on MooseX::Types and MooseX::Types::Path::Class.
