Changes for next release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Fixed some documentation errors.
+
+
 0.05     2013-04-01
 
 - Renamed the user attribute to username, but the former will still be
