--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+- Added missing dependency (File::Slurp).
+
 0.07     2013-06-16
 
 - Require implementations to provide the driver name rather than trying to
