--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 {{$NEXT}}
 
-- Added missing dependency (File::Slurp).
+- The Core role didn't load File::Slurp, which it needs to run Perl script
+  migration files. Fixed by Olaf Alders.
+
 
 0.07     2013-06-16
 
