--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Two migrations that started with the same number (01-foo and 01-bar) would
+  not be sorted correctly. (But hopefully you never name things in such a
+  confusing manner anyway). Patch by Reini Urban. RT #87205.
+
+
 0.08     2013-07-18
 
 - The Core role didn't load File::Slurp, which it needs to run Perl script
