--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Fixed warning in migration name comparison.
+
+
 0.12     2017-03-10
 
 - Replaced unnecessary use of File::Slurp with Path::Class::File's slurp
